tests/errors/test_36.x
// Attempted reassignment of array

let mut x: int[] = [1, 2, 3];

fn main() -> int {

    x = [2, 3, 4];

}